--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tailwindcss/vite": "^4.0.9",
     "designenterprisepresentation": "file:",
     "framer-motion": "^12.5.0",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.1",
     "react-scroll-parallax": "^3.4.5",
     "tailwindcss": "^4.0.9"
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@iconify/react": "^5.2.0",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
